--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo-google-fonts/roboto": "^0.1.0",
     "expo": "~39.0.2",
+    "expo-constants": "^9.2.0",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-color-matrix-image-filters": "^5.2.10",
+    "react-native-expo-viewport-units": "^0.0.8",
     "react-native-svg": "12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.13.12"
